--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 			<name>Sven Ewald</name>
 		</developer>
 	</developers>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<cobertura.aggregate>true</cobertura.aggregate>
+		<source.version>1.6</source.version>
+		<!-- <cobertura.maxmem>768M</cobertura.maxmem> -->
+	</properties>
 	<build>
 		<plugins>
 			<plugin>
@@ -30,6 +36,23 @@
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.5.2</version>
+				<configuration>
+					<formats>
+						<format>html</format>
+						<format>xml</format>
+					</formats>
+					<instrumentation>
+						<excludes>
+							<exclude>**/*Exception.class</exclude>
+							<exclude>**/*Error.class</exclude>
+						</excludes>
+					</instrumentation>
 				</configuration>
 			</plugin>
 		</plugins>
