--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,13 @@
 	<groupId>org.xmlbeam</groupId>
 	<artifactId>xmlprojector</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>XMLProjector</name>
+	<name>XMLBeam</name>
 	<description>
 	A java library to create "projections" of XML-Data to Java (and back). A projection is a defined subset of XML elements or attributes
 	in an XML DOM tree. In contrast to data binding the resulting Java API is much more stable.
 	Requires at least Java6 and has no further runtime dependencies.
 	</description>
+	<url>http://xmlbeam.org</url>
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
@@ -25,17 +26,17 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<cobertura.aggregate>true</cobertura.aggregate>
-		<source.version>1.6</source.version>
-		<!-- <cobertura.maxmem>768M</cobertura.maxmem> -->
+		<java.version>1.6</java.version>
 	</properties>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -65,6 +66,4 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-	<url>www.xmlbeam.org</url>
 </project>
