--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -57,7 +58,9 @@
 				<version>2.5.2</version>
 				<configuration>
 					<formats>
-						<format>html</format>
+					<!--
+					  	<format>html</format>
+					  	-->
 						<format>xml</format>
 					</formats>
 					<instrumentation>
@@ -86,6 +89,19 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -101,5 +117,5 @@
 			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>	
+	</dependencies>
 </project>
