--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,23 @@
 					</execution>
 				</executions>
 			</plugin>
+			</plugins>
+			        <pluginManagement> 
+            <plugins> 
+			  <plugin> 
+                    <artifactId>maven-site-plugin</artifactId> 
+                    <version>2.1</version> 
+                    <dependencies> 
+                        <!-- additional dependencies required by "source-class" implementations are added here -->
+                        <dependency> 
+                            <groupId>org.tinyjee.dim</groupId> 
+                            <artifactId>doxia-include-macro</artifactId> 
+                            <version>1.1</version> 
+                        </dependency> 
+                    </dependencies> 
+                </plugin>
 		</plugins>
+		</pluginManagement>
 	</build>
 	<dependencies>
 		<dependency>
