--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<description>
 	A java library to create "projections" of XML-Data to Java (and back). A projection is a defined subset of XML elements or attributes in an XML DOM tree. In contrast to data binding the resulting Java API is much more stable. Requires at least Java6 and has no further runtime dependencies.
 	</description>
-	<inceptionYear>2012</inceptionYear>
+	<inceptionYear>2012-12-21</inceptionYear>
 	<url>http://xmlbeam.org</url>
 	<licenses>
 		<license>
@@ -77,15 +77,29 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.7</version>
+				<!--  <version>1.7</version>
+				-->
 				<executions>
 					<execution>
 						<!-- The github readme file serves as introduction page for the site. 
 							So we copy it to the site sources. -->
+						<id>Copy github readme as site content</id>
 						<phase>pre-site</phase>
 						<configuration>
 							<target>
 								<copy file="README.md" tofile="src/site/apt/introduction.apt" />
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>Patch syntax highlighter css</id>
+						<phase>post-site</phase>
+						<configuration>
+							<target>
+								<copy file="src/site/shCoreEclipse.css" tofile="target/site/attached-includes/css" />
 							</target>
 						</configuration>
 						<goals>
@@ -107,22 +121,25 @@
 					</execution>
 				</executions>
 			</plugin>
-			</plugins>
-			        <pluginManagement> 
-            <plugins> 
-			  <plugin> 
-                    <artifactId>maven-site-plugin</artifactId> 
-                    <version>2.1</version> 
-                    <dependencies> 
-                        <!-- additional dependencies required by "source-class" implementations are added here -->
-                        <dependency> 
-                            <groupId>org.tinyjee.dim</groupId> 
-                            <artifactId>doxia-include-macro</artifactId> 
-                            <version>1.1</version> 
-                        </dependency> 
-                    </dependencies> 
-                </plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-site-plugin</artifactId>
+					 
+					<version>3.0</version>
+					
+					<dependencies>
+						<!-- additional dependencies required by "source-class" implementations 
+							are added here -->
+						<dependency>
+							<groupId>org.tinyjee.dim</groupId>
+							<artifactId>doxia-include-macro</artifactId>
+							<version>1.1</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+			</plugins>
 		</pluginManagement>
 	</build>
 	<dependencies>
@@ -139,4 +156,10 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	 <distributionManagement>
+    <site>
+      <id>xmlbeam.org</id>
+      <url>file:/tmp</url>
+    </site>
+  </distributionManagement>
 </project>
