fixed awfulsome css

--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 				<version>2.5.2</version>
 				<configuration>
 					<formats>
-						<!-- <format>html</format> -->
+						<format>html</format>
 						<format>xml</format>
 					</formats>
 					<instrumentation>
