First running version with Java8 default methods. Temporary using external asm lib.

--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,11 @@
 			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm</artifactId>
+			<version>4.2</version>
+		</dependency>
 	</dependencies>
 	<distributionManagement>
 		<site>
