--- a/pom.xml
+++ b/pom.xml
@@ -158,11 +158,15 @@
         <version>2.6</version>
         <executions>
           <execution>
-            <id>javacc</id>
+            <id>xpath</id>
             <goals>
-              <goal>javacc</goal>
+              <goal>jjtree-javacc</goal>
             </goals>
             <configuration>
+<!--             
+            <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
+ -->            
+            <javadocFriendlyComments>true</javadocFriendlyComments>
               <lookAhead>2</lookAhead>
               <isStatic>false</isStatic>
             </configuration>
