--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 						<excludes>
 							<exclude>**/*Exception.class</exclude>
 							<exclude>**/*Error.class</exclude>
-							<!--  <exclude>**/org/objectweb/asm/*.class</exclude> -->
+							<!-- <exclude>**/org/objectweb/asm/*.class</exclude> -->
 							<exclude>**/duplex/JJTXParserState.class</exclude>
 							<exclude>**/duplex/Node.class</exclude>
 							<exclude>**/duplex/XParserTreeConstants.class</exclude>
@@ -162,27 +162,25 @@
 					</dependency>
 				</dependencies>
 			</plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>javacc-maven-plugin</artifactId>
-        <version>2.6</version>
-        <executions>
-          <execution>
-            <id>xpath</id>
-            <goals>
-              <goal>jjtree-javacc</goal>
-            </goals>
-            <configuration>
-<!--             
-            <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
- -->            
-            <javadocFriendlyComments>true</javadocFriendlyComments>
-              <lookAhead>2</lookAhead>
-              <isStatic>false</isStatic>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>javacc-maven-plugin</artifactId>
+				<version>2.6</version>
+				<executions>
+					<execution>
+						<id>xpath</id>
+						<goals>
+							<goal>jjtree-javacc</goal>
+						</goals>
+						<configuration>
+							<!-- <outputDirectory>${project.build.directory}/generated-sources</outputDirectory> -->
+							<javadocFriendlyComments>true</javadocFriendlyComments>
+							<lookAhead>2</lookAhead>
+							<isStatic>false</isStatic>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -221,6 +219,10 @@
 			<id>xmlbeam.org</id>
 			<url>file:/tmp</url>
 		</site>
+		<repository>
+			<id>bintray</id>
+			<url>https://api.bintray.com/maven/svenewald/xmlbeam/xmlbeam</url>
+		</repository>
 	</distributionManagement>
 	<profiles>
 		<profile>
