--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,7 @@
 	<artifactId>xmlprojector</artifactId>
 	<version>1.4.2-SNAPSHOT</version>
 	<name>XMLBeam Data Projector</name>
-	<description>
-	A java library to create "projections" of XML-Data to Java (and back). A projection is a defined subset of XML elements or attributes in an XML DOM tree. In contrast to data binding the resulting Java API is much more stable. Requires at least Java6 and has no further runtime dependencies.
-	</description>
+	<description>A java XML CRUD library to create &quot;projections&quot; of XML-Data to Java (and back). A projection is a defined subset of XML elements or attributes in an XML DOM tree. In contrast to data binding the resulting Java API does not mirror the XML structure, but user defined views to the structure. Requires at least Java6, supports Java8 features and has no further runtime dependencies.</description>
 	<inceptionYear>2012-12-21</inceptionYear>
 	<url>http://xmlbeam.org</url>
 	<licenses>
@@ -39,6 +37,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<cobertura.aggregate>true</cobertura.aggregate>
 		<java.version>1.6</java.version>
+		<additionalparam>-Xdoclint:none</additionalparam>
 	</properties>
 	<build>
 		<testResources>
@@ -223,6 +222,10 @@
 			<id>bintray</id>
 			<url>https://api.bintray.com/maven/svenewald/xmlbeam/xmlbeam</url>
 		</repository>
+		<snapshotRepository>
+			<id>bintray-snapshots</id>
+			<url>https://api.bintray.com/maven/svenewald/xmlbeam/xmlbeam</url>
+		</snapshotRepository>
 	</distributionManagement>
 	<profiles>
 		<profile>
