--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<cobertura.aggregate>true</cobertura.aggregate>
 		<java.version>1.6</java.version>
-		<additionalparam>-Xdoclint:none</additionalparam>
+	<!-- 	<additionalparam>-Xdoclint:none</additionalparam>  -->
 	</properties>
 	<build>
 		<testResources>
