--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<cobertura.aggregate>true</cobertura.aggregate>
 		<java.version>1.6</java.version>
-	<!-- 	<additionalparam>-Xdoclint:none</additionalparam>  -->
+		<!-- <additionalparam>-Xdoclint:none</additionalparam> -->
 	</properties>
 	<build>
 		<testResources>
@@ -184,8 +184,12 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+					<artifactId>maven-project-info-reports-plugin</artifactId>
+					<version>2.7</version>
+				</plugin>
+				<plugin>
 					<artifactId>maven-site-plugin</artifactId>
-					<version>3.0</version>
+					<version>3.4</version>
 					<dependencies>
 						<!-- additional dependencies required by "source-class" implementations 
 							are added here -->
