separating maven and eclipse output

--- a/.classpath
+++ b/.classpath
@@ -34,5 +34,5 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="output" path="target/classes"/>
+	<classpathentry kind="output" path="target-eclipse/classes"/>
 </classpath>
