--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.xmlbeam</groupId>
 	<artifactId>xmlprojector</artifactId>
-	<version>1.4.11</version>
+	<version>1.4.12</version>
 	<name>XMLBeam Data Projector</name>
-	<description>A java XML CRUD library to create &quot;projections&quot; of XML-Data to Java (and back). A projection is a defined subset of XML elements or attributes in an XML DOM tree. In contrast to data binding the resulting Java API does not mirror the XML structure, but user defined views to the structure. Requires at least Java6, supports Java8 features and has no further runtime dependencies.</description>
+	<description>The coolest XML library for Java around. Define typesafe views (projections) to xml. Use XPath to read and write XML. Bind XML to Java collections. Requires at least Java6, supports Java8 features and has no further runtime dependencies.</description>
 	<inceptionYear>2012-12-21</inceptionYear>
 	<url>http://xmlbeam.org</url>
 	<licenses>
@@ -30,7 +30,7 @@
 		<url>https://github.com/SvenEwald/xmlbeam.git</url>
 	</scm>
 	<ciManagement>
-		<system>Jenkins</system>
+		<system>Jenkins and Codeship</system>
 	</ciManagement>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
