--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<name>XMLBeam Data Projector</name>
 	<description>The coolest XML library for Java around. Define typesafe views (projections) to xml. Use XPath to read and write XML. Bind XML to Java collections. Requires at least Java6, supports Java8 features and has no further runtime dependencies.</description>
 	<inceptionYear>2012-12-21</inceptionYear>
-	<url>http://xmlbeam.org</url>
+	<url>https://xmlbeam.org</url>
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
